--- a/WEB/css/Style.css
+++ b/WEB/css/Style.css
@@ -27,9 +27,8 @@ body {
   height: 100vh;
 }
 
-
 /* banner */
-.tamañoBanner{
+.tamañoBanner {
   height: 100vh;
   width: 100vw;
 }
@@ -48,4 +47,20 @@ body {
 
 #intro2 {
   font-size: 1.5em;
+}
+
+.imageContainer {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 1em;
+}
+
+@media (min-width: 801px) {
+  .imageContainer {
+    margin: 1em;
+  }
+  .descripcionQuieneso {
+    text-align: start!important;
+    max-width: 40%!important;
+  }
 }
