--- a/WEB/css/Style.css
+++ b/WEB/css/Style.css
@@ -1,5 +1,7 @@
 body {
   font-family: "Anton", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .conteiner-fluid-custom {
@@ -55,7 +57,8 @@ body {
   margin-bottom: 1em;
 }
 
-@media (min-width: 801px) {
+/* pc view */
+@media (min-width: 1025px) {
   .tamañoBanner {
     height: 90vh;
   }
@@ -65,5 +68,18 @@ body {
   .descripcionQuieneso {
     text-align: start !important;
     max-width: 40% !important;
+  }
+}
+
+/* tablet view */
+@media (min-width: 801px) {
+  .my-4-tablet {
+    margin-top: 4em;
+    margin-bottom: 4em;
+  }
+
+  .my-5-tablet {
+    margin-top: 5em;
+    margin-bottom: 5em;
   }
 }
