--- a/WEB/css/Style.css
+++ b/WEB/css/Style.css
@@ -3,6 +3,9 @@ body {
   margin: 0;
   padding: 0;
 }
+.text-decoration-none{
+  text-decoration: none!important;
+}
 
 .conteiner-fluid-custom {
   height: auto;
@@ -35,6 +38,10 @@ body {
   width: 100vw;
 }
 
+.planPrices{
+  max-width: 90vw;
+}
+
 /* footer */
 .footer {
   background-color: black;
@@ -57,6 +64,10 @@ body {
   margin-bottom: 1em;
 }
 
+.dontShowOnmobile{
+  display: none;
+}
+
 /* pc view */
 @media (min-width: 1025px) {
   .tamañoBanner {
@@ -73,6 +84,14 @@ body {
 
 /* tablet view */
 @media (min-width: 801px) {
+
+  .showOnTablet{
+    display: block;
+  }
+
+  .dontShowOnTablet{
+    display: none;
+  }
   .my-4-tablet {
     margin-top: 4em;
     margin-bottom: 4em;
